Bug 116680 - Sidebar can't be undocked
Summary: Sidebar can't be undocked
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2018-03-28 10:03 UTC by Xisco Faulí
Modified: 2018-04-05 11:57 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
screencast (776.83 KB, video/x-matroska)
2018-03-28 11:44 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-03-28 10:03:07 UTC
Steps to reproduce:
1. Open any component
2. Display the sidebar
3. Try to undocked it -> not possible

Reproduced in

Version: 6.1.0.0.alpha0+
Build ID: 8329f4541e27402d19729ae1588af8bfe61f7b49
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 1 Xisco Faulí 2018-03-28 10:04:18 UTC
Regression introduced by:

author	Jim Raykowski <raykowj@gmail.com>	2018-02-04 14:12:32 -0900
committer	Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>	2018-02-05 10:40:59 +0100
commit bcfc348663b04834fe8e6d6315f647be1595469a (patch)
tree 31789487672b5577fc1a42294aea7118740b2cda
parent 914a35e8467252da43f864c86b0a820d8c0bd38e (diff)
tdf#115434 Fix key press misbehaviors in sidebar
This patch also is for tdf#98505 and tdf#84657

Bisected with: bibisect-linux64-6.1

Adding Cc: to Jim Raykowski
Comment 2 Samuel Mehrbrodt 2018-03-28 10:10:21 UTC
Probably fixed in this branch https://cgit.freedesktop.org/libreoffice/core/log/?h=feature/docking_windows
Comment 3 Katarina Behrens (Inactive) 2018-03-28 11:31:44 UTC
@Xisco: how are you undocking sidebar?

Ctrl-doubleclick on some empty space (between widgets)?
Sidebar config menu (gear icon) and then choosing undock from menu? 
Drag with LMB pressed?
Comment 4 Katarina Behrens (Inactive) 2018-03-28 11:36:40 UTC
> Probably fixed in this branch
> https://cgit.freedesktop.org/libreoffice/core/log/?h=feature/docking_windows

Feature branch is ... well, just that -- a new feature. Once it's merged, users will be able to undock sidebar by pressing LMB over a grip (just like in toolbars) and drag'n'drop outside docking area.

But presumably Xisco is referring to some other ways to undock SB (thus my question above) which no longer work
Comment 5 Xisco Faulí 2018-03-28 11:42:25 UTC
dragging and dropping the sidebar decorator on top(In reply to Katarina Behrens (CIB) from comment #3)
> @Xisco: how are you undocking sidebar?
> 
> Ctrl-doubleclick on some empty space (between widgets)?
> Sidebar config menu (gear icon) and then choosing undock from menu? 
> Drag with LMB pressed?

dragging and dropping the sidebar decorator on top
Comment 6 Xisco Faulí 2018-03-28 11:44:33 UTC
Created attachment 140939 [details]
screencast
Comment 7 Jim Raykowski 2018-03-29 06:46:33 UTC
I confirm this.

Here is a patch:
https://gerrit.libreoffice.org/#/c/52047/
Comment 8 Commit Notification 2018-03-29 12:39:59 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6c57ae39d783ae92a43dc2e113ea6e2dfb52af22

tdf#116680 fix sidebar can't undock

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Xisco Faulí 2018-04-04 08:43:09 UTC
Fix verified in

Version: 6.1.0.0.alpha0+
Build ID: 2d5ce0e1b233c83f91481cd6b9306ac8de7f5ff8
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

@Jim, Should it be closed as RESOLVED FIXED?
Comment 10 Jim Raykowski 2018-04-05 07:12:04 UTC
I believe the patch has fixed this. Is it customary for the bug reporter to close the report or is it ok for anyone to close it?
Comment 11 Samuel Mehrbrodt 2018-04-05 07:13:34 UTC
(In reply to Jim Raykowski from comment #10)
> I believe the patch has fixed this. Is it customary for the bug reporter to
> close the report or is it ok for anyone to close it?

If you fixed it, you can directly set it to RESOLVED FIXED. Once another person verifies the fix, he sets the status to RESOLVED VERIFIED.
Comment 12 Jim Raykowski 2018-04-05 07:44:31 UTC
(In reply to Samuel Mehrbrodt (CIB) from comment #11)
> (In reply to Jim Raykowski from comment #10)
> > I believe the patch has fixed this. Is it customary for the bug reporter to
> > close the report or is it ok for anyone to close it?
> 
> If you fixed it, you can directly set it to RESOLVED FIXED. Once another
> person verifies the fix, he sets the status to RESOLVED VERIFIED.

Thanks for clearing that up for me.