tdf#116680 fix sidebar can't undock

Change-Id: Ic3d198488de6d0420dbdb8fb7dbfb0335556e108
Reviewed-on: https://gerrit.libreoffice.org/52047
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>
Tested-by: Jenkins <ci@libreoffice.org>